--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@ title: Circum
 ---
 <div class="container-fluid">
 	<header class="row justify-content-center" style="background: url(/assets/img/bg.png); background-size: cover;">
-		<div class="col-8 col-md-4 text-center align-self-center p-5">
+		<div class="col-8 col-lg-6 col-xl-4 text-center align-self-center pt-5 pb-3">
 			<img src="/assets/img/logo.png" class="img-fluid" />
 		</div>
 	</header>
 	<div class="container">
 		<h1 class="h1-responsive text-center my-5">Smarter Money for the Network Economy</h1>
 		{% include blocks/smarter-money.html %}
+
+		{% include blocks/subscribe.html %}
+	</div>
 		
+	<div class="row text-center white-text pt-3 pb-5 mt-5" style="background-color: #4FA88F;">
+		<div class="container">
+			<h2 class="h2-responsive mt-5 mb-3">Features</h2>
+			{% include blocks/features.html %}
+		</div>
+	</div>
+
+	<div class="container">
 		<h2 class="h2-responsive mt-5 mb-4">The Problem</h2>
 		{% include blocks/the-problem.html %}
 		
@@ -27,12 +38,6 @@ title: Circum
 
 		<h2 class="h2-responsive mt-5 mb-4">The Team</h2>
 		{% include blocks/the-team.html %}
-	</div>
-	<div class="row text-center teal white-text pt-3 pb-5 mt-5">
-		<div class="container">
-			<h2 class="h2-responsive mt-5 mb-3">Features</h2>
-			{% include blocks/features.html %}
-		</div>
 	</div>
 	<footer class="row p-5 grey lighten-3">
 		<div class="col text-center align-self-center">
