--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Circum
 		</div>
 	</header>
 	<div class="container">
-		<h1 class="h1-responsive text-center my-5">Smarter Money for the Network Economy</h1>
+		<h1 class="h1-responsive text-center my-5">Smarter money for the network economy</h1>
 		{% include blocks/smarter-money.html %}
 
 		{% include blocks/subscribe.html %}
