--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Circum
 	{% include blocks/the-problem.html %}
 	
 	<blockquote class="blockquote bq-primary text-primary my-5">
-		<h4 class="display-4">connecting billions of points of commerce through the community</h4>
+		<h4 class="display-4">connecting billions of points of commerce through community</h4>
 	</blockquote>
 
 	<h2 class="h2-responsive mt-5 mb-4">The Solution</h2>
