--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <a href="#faq" class="anchor">FAQ</a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/circumworld" class="btn btn-o fancybox">Join the Conversation</a>
+                                <a href="https://t.me/circumworld" class="btn btn-o fancybox">Join the Conversation</a>
                             </li>
                         </ul>
                     </nav>
