--- a/index.html
+++ b/index.html
@@ -184,9 +184,8 @@
                     <div class="step__text">
                         <h3>Project initiation</h3>
                         <ul>
-                            <li>Corporate structuring, team and
-                                advisors closed (UK & Australia)</li>
-                            <li>Private sale closed May 31st</li>
+                            <li>Corporate structuring</li>
+                            <li>Team and advisors closed (UK and Australia)</li>
                         </ul>
                     </div>
                 </div>
@@ -200,7 +199,7 @@
                     <div class="step__text">
                         <h3>TSE Kick off</h3>
                         <ul>
-                            <li>Pre-ICO sale June 1st – 30th June</li>
+                            <li>TSE Private sale</li>
                         </ul>
                     </div>
                 </div>
@@ -214,9 +213,9 @@
                     <div class="step__text">
                         <h3>TSE Ramp up</h3>
                         <ul>
-                            <li>Backend and infrastructure
-                                development (Refactoring)</li>
-                            <li>Mobile app development</li>
+                            <li>TSE Pre-Buy</li>
+                            <li>Backend and infrastructure development (Refactoring)</li>
+                            <li>Mobile app R and D started</li>
                         </ul>
                     </div>
                 </div>
@@ -230,7 +229,6 @@
                     <div class="step__text">
                         <h3>TSE Public Sale</h3>
                         <ul>
-                            <li>ICO - Public Sale Aug 1st – 31st</li>
                         </ul>
                     </div>
                 </div>
@@ -238,16 +236,15 @@
                 <div class="step">
                     <div class="step__heading">
                         <i></i>
-                        <p>2H
+                        <p>December
                             <br>2018</p>
                     </div>
                     <div class="step__text">
-                        <h3>Service development</h3>
+                        <h3>Soft Launch</h3>
                         <ul>
-                            <li>Technology patenting, security
-                                    auditing & white hacking</li>
-                            <li>Merchant deal creation tools and
-                                    reporting</li>
+                            <li>Technology patenting</li>
+                            <li>Security auditing & white hacking</li>
+                            <li>Mobile app pilot and release</li>
                         </ul>
                     </div>
                 </div>
@@ -259,7 +256,7 @@
                             <br>2019</p>
                     </div>
                     <div class="step__text">
-                        <h3>Service & market launch</h3>
+                        <h3>Service and market launch</h3>
                         <ul>
                             <li>Service and market launch</li>
                             <li>Mobile app pilot and release</li>
@@ -278,13 +275,12 @@
                         <p>Q2 2019</p>
                     </div>
                     <div class="step__text">
-                        <h3>Community industrialization stream</h3>
+                        <h3>Community industrialization</h3>
                         <ul>
-                                <li>Performance, scale enhancement</li>
-                                <li>Increased key partnership</li>
-                                <li>Improved merchant tools and
-                                        solutions</li>
-                                <li>Personal finance management feature</li>
+                                <li>Performance, scale and security enhancement</li>
+                            <li>Increased key partnership</li>
+                            <li>Improved merchant tools and solutions</li>
+                            <li>Personal finance management feature</li>
                         </ul>
                     </div>
                 </div>
@@ -295,14 +291,12 @@
                         <p>2h 2019</p>
                     </div>
                     <div class="step__text">
-                        <h3>Consumer full life cycle stream</h3>
+                        <h3>Consumer full life cycle</h3>
                         <ul>
-                            <li>Sponsored coin placement and
-                                    consumer reach</li>
+                            <li>Sponsored coin placement and consumer reach</li>
                             <li>Data management tools</li>
                             <li>New revenue streams</li>
-                            <li>Online payments (website, payment
-                                    gateways and mobile apps)</li>
+                            <li>Online payments (website, payment gateways and mobile apps)</li>
                             <li>Merchant APIs</li>
                             <li>AI community assistant</li>
                         </ul>
