--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <h3>Soft Launch</h3>
                         <ul>
                             <li>Technology patenting</li>
-                            <li>Security auditing & white hacking</li>
+                            <li>Security auditing and white hacking</li>
                             <li>Mobile app pilot and release</li>
                         </ul>
                     </div>
@@ -677,7 +677,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Warren Sample</h3>
-                                <p>Co-Founder, Chief Strategy & Commercial Officer</p>
+                                <p>Co-Founder, Chief Strategy and Commercial Officer</p>
                             </div>
 
                             <div class="socials">
@@ -743,7 +743,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Dr. Annina Ruottu</h3>
-                                <p>Head of Corp Sustainability & Regulatory Affairs</p>
+                                <p>Head of Corp Sustainability and Regulatory Affairs</p>
                             </div>
 
                             <div class="socials">
