--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Andrew Murphy</h3>
-                                <p>Technology Adviser</p>
+                                <p>Technology Advisor</p>
                             </div>
 
                             <div class="socials">
@@ -816,7 +816,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Randall Griffis</h3>
-                                <p>Commercial Adviser</p>
+                                <p>Commercial Advisor</p>
                             </div>
 
                             <div class="socials">
