favicon/facebook/hrefs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:image" content="images/site-preview.jpg" />
+    <meta property="og:description" content="Smarter money for the digital network economy" />
+    <meta property="og:url"content="https://www.circum.world/" />
+    <meta property="og:title" content="Smarter money for the digital network economy" />
+
 
     <link rel="stylesheet" href="css/main.css">
     
@@ -58,11 +69,11 @@
                             <li>
                                 <a href="#team" class="anchor">Team</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#faq" class="anchor">FAQ</a>
-                            </li>
+                            </li> -->
                             <li>
-                                <a href="https://t.me/circumworld" class="btn btn-o fancybox">Join the Conversation</a>
+                                <a target="_blank" href="https://t.me/circumworld" class="btn btn-o fancybox">Join the Conversation</a>
                             </li>
                         </ul>
                     </nav>
@@ -72,7 +83,7 @@
                         <ul>
 
                             <li>
-                                <a href="https://t.me/circumworld" target="_blank" class="social-item tel">
+                                <a target="_blank" href="https://t.me/circumworld" target="_blank" class="social-item tel">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
                                         viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve"
                                         width="512px" height="512px">
@@ -84,7 +95,7 @@
                             </li>
 
                             <li>
-                                <a href="https://www.facebook.com/circumworld/" target="_blank" class="social-item fb">
+                                <a target="_blank" href="https://www.facebook.com/circumworld/" target="_blank" class="social-item fb">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
                                         width="512px" height="512px" viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
                                         xml:space="preserve">
@@ -95,7 +106,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/circumworld" target="_blank" class="social-item twtr">
+                                <a target="_blank" href="https://twitter.com/circumworld" target="_blank" class="social-item twtr">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
                                         viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve"
                                         width="512px" height="512px">
@@ -683,7 +694,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/warrensample/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/warrensample/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -705,7 +716,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/petteriponkkala/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/petteriponkkala/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -727,7 +738,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/jrhammond/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/jrhammond/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -749,7 +760,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/annina-ruottu-192b8415a/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/annina-ruottu-192b8415a/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -778,7 +789,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/drctan/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/drctan/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -800,7 +811,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/andrew-d-murphy/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/andrew-murphy-9640683/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -822,7 +833,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/randall-griffis-6746636/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/randall-griffis-6746636/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -851,7 +862,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/simonsorockyj/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/simonsorockyj/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -873,7 +884,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/kimhansenyeah/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/kimhansenyeah/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -895,7 +906,7 @@
                             <div class="socials">
                                 <ul>
                                     <li>
-                                        <a href="https://www.linkedin.com/in/deancannell/" target="_blank" class="social-item">
+                                        <a target="_blank" href="https://www.linkedin.com/in/deancannell/" target="_blank" class="social-item">
                                             <img src="images/linkedin-logo.svg" alt="">
                                         </a>
                                     </li>
@@ -939,7 +950,7 @@
                     <ul>
 
                         <li>
-                            <a href="https://t.me/circumworld" target="_blank" class="social-item tel">
+                            <a target="_blank" href="https://t.me/circumworld" target="_blank" class="social-item tel">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
                                     viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve" width="512px"
                                     height="512px">
@@ -951,7 +962,7 @@
                         </li>
 
                         <li>
-                            <a href="https://www.facebook.com/circumworld/" target="_blank" class="social-item fb">
+                            <a target="_blank" href="https://www.facebook.com/circumworld/" target="_blank" class="social-item fb">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
                                     width="512px" height="512px" viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
                                     xml:space="preserve">
@@ -962,7 +973,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/circumworld" target="_blank" class="social-item twtr">
+                            <a target="_blank" href="https://twitter.com/circumworld" target="_blank" class="social-item twtr">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
                                     viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve" width="512px"
                                     height="512px">
@@ -974,7 +985,7 @@
                         </li>
 
                         <li>
-                            <a href="https://www.linkedin.com/company/circum-world" target="_blank" class="social-item li">
+                            <a target="_blank" href="https://www.linkedin.com/company/circum-world" target="_blank" class="social-item li">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 310 310" style="enable-background:new 0 0 310 310;" xml:space="preserve" width="512px" height="512px">
                                     <g id="XMLID_801_">
                                         <path id="XMLID_802_" d="M72.16,99.73H9.927c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5H72.16c2.762,0,5-2.238,5-5V104.73   C77.16,101.969,74.922,99.73,72.16,99.73z" fill="#FFFFFF"/>
