--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
                             <br>2018</p>
                     </div>
                     <div class="step__text">
-                        <h3>TSE Public Sale</h3>
+                        <h3>Token Sale Event</h3>
                         <ul>
+                            <li>Whitelisted Public sale begins</li>
                         </ul>
                     </div>
                 </div>
@@ -240,11 +241,11 @@
                             <br>2018</p>
                     </div>
                     <div class="step__text">
-                        <h3>Soft Launch</h3>
+                        <h3>Service Development</h3>
                         <ul>
                             <li>Technology patenting</li>
                             <li>Security auditing and white hacking</li>
-                            <li>Mobile app pilot and release</li>
+                            <li>Infrastructure automation and continuous integration</li>
                         </ul>
                     </div>
                 </div>
@@ -258,7 +259,6 @@
                     <div class="step__text">
                         <h3>Service and market launch</h3>
                         <ul>
-                            <li>Service and market launch</li>
                             <li>Mobile app pilot and release</li>
                             <li>Token circulation and retail trading</li>
                             <li>Early adopter merchants live</li>
@@ -277,10 +277,10 @@
                     <div class="step__text">
                         <h3>Community industrialization</h3>
                         <ul>
-                                <li>Performance, scale and security enhancement</li>
-                            <li>Increased key partnership</li>
+                                <li>Performance, scale and security enhancements</li>
+                            <li>Increased key partnerships</li>
                             <li>Improved merchant tools and solutions</li>
-                            <li>Personal finance management feature</li>
+                            <li>Personal finance management features</li>
                         </ul>
                     </div>
                 </div>
