--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Smarter money for the digital network economy</title>
+    <title>Bringing the cash economy online</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,9 +18,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta property="og:image" content="images/site-preview.jpg" />
-    <meta property="og:description" content="Smarter money for the digital network economy" />
+    <meta property="og:description" content="Bringing the cash economy online" />
     <meta property="og:url"content="https://www.circum.world/" />
-    <meta property="og:title" content="Smarter money for the digital network economy" />
+    <meta property="og:title" content="Bringing the cash economy online" />
 
 
     <link rel="stylesheet" href="css/main.css">
@@ -137,7 +137,7 @@
     <section class="offer">
         <div class="container">
             <div class="offer-content">
-                <h1 class="wow fadeInDown" style="visibility: hidden;" data-wow-duration="1.5s">Smarter money for the digital network economy</h1>
+                <h1 class="wow fadeInDown" style="visibility: hidden;" data-wow-duration="1.5s">Bringing the cash economy online</h1>
                 <p class="wow fadeIn" style="visibility: hidden;" data-wow-duration="2s" data-wow-delay="1.5s">Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.</p>
 
                 <form action="https://www.getdrip.com/forms/589488568/submissions" method="post" data-drip-embedded-form="589488568" class="mailchimp-form wow fadeIn" style="visibility: hidden;" data-wow-duration="1.5s" data-wow-delay="1.5s">
