new litepaper pdf.

--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
     
                 <li class="faq-item">
                     <h3>What are the token sale dates?</h3>
-                    <p>The Public Token Sale dates will be determined during July, likely Q3 2018.</p>
+                    <p>The Public Token Sale dates will be determined during July, likely Q4 2018.</p>
                 </li>
     
                 <li class="faq-item">
@@ -992,6 +992,16 @@
                     <h3>Will unsold tokens be burned?</h3>
                     <p>Yes.</p>
                 </li>
+
+                <!-- <li class="faq-item">
+                    <h3>When my tokens will be transferred to my wallet?</h3>
+                    <p>The circum.world Tokens (CRCM) will be issued at the end of each XXXXX either end of round, or at the time of the transaction.</p>
+                </li> -->
+
+                <!-- <li class="faq-item">
+                    <h3>Pre´sale Bonus</h3>
+                    <p>Pre-Sale discount of 30% off Public Sale pricing.</p>
+                </li> -->
 
                 <li class="faq-item">
                     <h3>How will the funds received be used?</h3>
