--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <div class="step__text">
                         <h3>TSE Kick off</h3>
                         <ul>
-                            <li>TSE Private sale</li>
+                            <li>Commence white paper</li>
                         </ul>
                     </div>
                 </div>
@@ -223,9 +223,9 @@
                     <div class="step__text">
                         <h3>TSE Ramp up</h3>
                         <ul>
-                            <li>TSE Pre-Buy</li>
+                            <li>TSE Private sale</li>
                             <li>Backend and infrastructure development (Refactoring)</li>
-                            <li>Mobile app R and D started</li>
+                            <li>Mobile app R &amp; D started</li>
                         </ul>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                     <div class="step__text">
                         <h3>Token Sale Event</h3>
                         <ul>
-                            <li>Whitelisted Public sale begins</li>
+                            <li>TSE Pre-Buy</li>
                         </ul>
                     </div>
                 </div>
@@ -247,12 +247,13 @@
                 <div class="step">
                     <div class="step__heading">
                         <i></i>
-                        <p>December
+                        <p>Q4
                             <br>2018</p>
                     </div>
                     <div class="step__text">
                         <h3>Service Development</h3>
                         <ul>
+                            <li>Whitelisted Public sale begins</li>
                             <li>Technology patenting</li>
                             <li>Security auditing and white hacking</li>
                             <li>Infrastructure automation and continuous integration</li>
