--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                 </li>
     
                 <li class="faq-item">
-                    <h3>What is the Hard Cap?</h3>
+                    <h3>What is the Target Raise?</h3>
                     <p>The target amount of funds collected during the Token Sales Event is set at USD21.1m.</p>
                 </li>
     
