--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="step__text">
                         <h3>Consumer Full Life-Cycle</h3>
                         <ul>
-                            <li>Sponsored coins placement (consumer engagment)</li>
+                            <li>Sponsored coins placement (consumer engagement)</li>
                             <li>Data management &amp; reporting tools </li>
                             <li>New revenue streams</li>
                             <li>Online payments (website, payment gateways &amp; mobile apps)</li>
