--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <ul>
                             <li>Private sale closed</li>
                             <li>Early service prototyping</li>
-                            <li>Mobile app R &amp; D started</li>
+                            <li>Mobile app R&amp;D started</li>
                         </ul>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                             <li>Whitelisted public sale begins</li>
                             <li>Security auditing and white hacking</li>
                             <li>Infrastructure automation and continuous integration</li>
-                            <li>MVP and utility sign-off</li>
+                            <li>MVP and utility token sign-off</li>
                             <li>Bounty program kick off</li>
                         </ul>
                     </div>
