--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <path class="st0" id="XMLID_497_" d="M5.299,144.645l69.126,25.8l26.756,86.047c1.712,5.511,8.451,7.548,12.924,3.891l38.532-31.412   c4.039-3.291,9.792-3.455,14.013-0.391l69.498,50.457c4.785,3.478,11.564,0.856,12.764-4.926L299.823,29.22   c1.31-6.316-4.896-11.585-10.91-9.259L5.218,129.402C-1.783,132.102-1.722,142.014,5.299,144.645z M96.869,156.711l135.098-83.207   c2.428-1.491,4.926,1.792,2.841,3.726L123.313,180.87c-3.919,3.648-6.447,8.53-7.163,13.829l-3.798,28.146   c-0.503,3.758-5.782,4.131-6.819,0.494l-14.607-51.325C89.253,166.16,91.691,159.907,96.869,156.711z"
                                         />
                                     </svg>
-                                    <span>Join the commerce conversation</span>
+                                    <span>Join the conversation</span>
                                 </a>
                             </li>
                         </ul>
@@ -142,9 +142,6 @@
                     <br>
 Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.
 
-Half the world uses an outdated, inefficient and costly legacy banking eco-system that has seen no real innovations in decades and the other half, the Unbanked, never have used it and with smartphones will never need to. circum.world will take its proven technology deployment expertise together with the advances in blockchain to deliver a genuine alternative to the existing payment, commerce and banking technology.
-<br>
-                    <b>This result is a crypto token with genuine, real world utility and adoptability.</b>
                 </p>
 
                 <form action="https://www.getdrip.com/forms/589488568/submissions" method="post" data-drip-embedded-form="589488568" class="mailchimp-form wow fadeIn" style="visibility: hidden;" data-wow-duration="1.5s" data-wow-delay="1.5s">
@@ -159,7 +156,10 @@ Half the world uses an outdated, inefficient and costly legacy banking eco-syste
             </div>
 
         </div>
-
+        <p>Half the world uses an outdated, inefficient and costly legacy banking eco-system that has seen no real      innovations in decades and the other half, the Unbanked, never have used it and with smartphones will never need to. circum.world will take its proven technology deployment expertise together with the advances in blockchain to deliver a genuine alternative to the existing payment, commerce and banking technology.
+        <br>
+                    <b>This result is a crypto token with genuine, real world utility and adoptability.</b>
+        </p>
         <button class="js-scroll-down scroll-down anchor" href="#introduction">
             <img src="images/scroll-down.png" alt="">
             <span class="label">VIEW MORE</span>
