--- a/index.html
+++ b/index.html
@@ -138,10 +138,7 @@
         <div class="container">
             <div class="offer-content">
                 <h1 class="wow fadeInDown" style="visibility: hidden;" data-wow-duration="1.5s">Bringing the cash economy online</h1>
-                <p class="wow fadeIn" style="visibility: hidden;" data-wow-duration="2s" data-wow-delay="1.5s">The Cash Economy is the $50 trillion market opportunity!
-                    <br>
-Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.
-
+                <p class="wow fadeIn" style="visibility: hidden;" data-wow-duration="2s" data-wow-delay="1.5s"><b>Digitalization of the Cash Economy is the $50 trillion market opportunity!</b> Much more than a payments provider, circum.world will utilize its tokenisation model to evolve the digital economy into the Intersection eConomy where the digital, mobile, social and physical worlds of commerce connect.This result is a crypto token with genuine, real world utility and adoptability.
                 </p>
 
                 <form action="https://www.getdrip.com/forms/589488568/submissions" method="post" data-drip-embedded-form="589488568" class="mailchimp-form wow fadeIn" style="visibility: hidden;" data-wow-duration="1.5s" data-wow-delay="1.5s">
@@ -156,10 +153,6 @@ Much more than a payments provider, circum.world will utilize its tokenisation m
             </div>
 
         </div>
-        <p>Half the world uses an outdated, inefficient and costly legacy banking eco-system that has seen no real      innovations in decades and the other half, the Unbanked, never have used it and with smartphones will never need to. circum.world will take its proven technology deployment expertise together with the advances in blockchain to deliver a genuine alternative to the existing payment, commerce and banking technology.
-        <br>
-                    <b>This result is a crypto token with genuine, real world utility and adoptability.</b>
-        </p>
         <button class="js-scroll-down scroll-down anchor" href="#introduction">
             <img src="images/scroll-down.png" alt="">
             <span class="label">VIEW MORE</span>
