--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     <div class="step__text">
                         <h3>Market Identification</h3>
                         <ul>
-                            <li>Core payments team &amp; execs spin-off opportunity</li>
-                            <li>Vision &amp; mission readiness</li>
+                            <li>Core payment team executives spin-off</li>
+                            <li>Clear commercialization opporunity identified</li>
                             <li>Focus on decentralized payments utilizing blockchain technology</li>
                         </ul>
                     </div>
